# auction-demo

./: CMakeLists.txt  README.md
conf/: access-control.conf
secrec/: alice_bid.sc  bob_bid.sc  charlie_result.sc
src/: bid.cpp  result.cpp
